--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h3>Трансфер на сервер Лорея</h3>
                     <label>12 Feb 2019</label>
                     <p>
-                        Сьогодні гільдія ReversaL повним складом трансфериться на
+                        Сьогодні гільдія ReversaL повним складом трансфернулась на
                         сервер Лорея. В планах активна гра у складі фракції NIPs.
                     </p>
                 </article>
@@ -72,7 +72,7 @@
                     <label>14 Jan 2019</label>
                     <p>
                         Cьогодні гільдії ReversaL West та ReversaL East вступили
-                        у фракцію Narnia і сформували єдиний таг Reversal!
+                        у фракцію Narnia і сформували єдиний таг ReversaL!
                     </p>
                 </article>
             </div>
@@ -156,20 +156,20 @@
             <h2>Зворотній зв'язок</h2>
             <form method="POST" action="https://formspree.io/valentyn17@gmail.com">
                 <label>
-                    Ім'я:
-                    <input type="text" name="user-name" required/>
+                    <input type="text" name="user-name" placeholder="Ім'я" required/>
                 </label>
                 <br />
+                <br>
                 <label>
-                    Елекронна адреса:
-                    <input type="email" name="user-email" required/>
+                    <input type="email" name="user-email" placeholder="Елекронна адреса" required/>
                 </label>
                 <br />
+                <br>
                 <label>
-                    Повідомлення:
-                    <textarea cols="40" rows="5" name="user-comment"></textarea>
+                    <textarea cols="40" rows="5" name="user-comment" placeholder="Повідомлення"></textarea>
                 </label>
                 <br />
+                <br>
                 <input type="submit" value="Send" /> <br />
              </form>
         </section>
