Responsive for table added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#news-sector">Новини</a></li>
                 <li><a href="#timetable-sector">Розклад</a></li>
                 <li><a href="#contact-sector">Контакти</a></li>
-                <li><a href="#feedback-sector">Зворотній зв'язок</a></li>
+                <li><a href="#feedback-sector">Зворотній&nbsp;зв'язок</a></li>
             </ul>
         </nav>
     </header>
@@ -129,6 +129,52 @@
                     <td>19:21</td>
                 </tr>
             </table>
+            <ul>
+                <li>Пн
+                    <ul>
+                        <li>Дельфійці&nbsp;21:21</li>
+                    </ul>
+                </li>
+                <li>Вт
+                    <ul>
+                        <li>Левіафан&nbsp;21:00</li>
+                        <li>Кракен&nbsp;21:07</li>
+                        <li>Гартарейн&nbsp;21:14</li>
+                        <li>Дельфійці&nbsp;21:21</li>
+                    </ul>
+                </li>
+                <li>Ср
+                    <ul>
+                        <li>Дельфійці&nbsp;17:21</li>
+                    </ul>
+                </li>
+                <li>Чт
+                    <ul>
+                        <li>Левіафан&nbsp;17:00</li>
+                        <li>Кракен&nbsp;17:07</li>
+                        <li>Гартарейн&nbsp;17:14</li>
+                        <li>Дельфійці&nbsp;17:21</li>
+                    </ul>
+                </li>
+                <li>Пт
+                    <ul>
+                        <li>Дельфійці&nbsp;19:21</li>
+                    </ul>
+                </li>
+                <li>Сб
+                    <ul>
+                        <li>Левіафан&nbsp;19:00</li>
+                        <li>Кракен&nbsp;19:07</li>
+                        <li>Гартарейн&nbsp;19:14</li>
+                        <li>Дельфійці&nbsp;19:21</li>
+                    </ul>
+                </li>
+                <li>Нд
+                    <ul>
+                        <li>Дельфійці&nbsp;19:21</li>
+                    </ul>
+                </li>
+            </ul>
         </section>
         <hr>
         <section id="contact-sector">
