Personal data cache added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>ReversaL</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
     <header>
         <div class="header-logo">
@@ -14,8 +16,9 @@
                 <img src="img/archeage-logo.png" class="archeage-logo" alt="Логотип ArcheAge">
                 <img src="img/reversal-logo.png" class="reversal-logo" alt="Логотип гільдії ReversaL">
             </div>
-            <p>сервер Лорея</p> 
+            <p>сервер Лорея</p>
         </div>
+        <br>
         <nav>
             <ul class="menu">
                 <li><a href="#home-sector">Головна</a></li>
@@ -31,8 +34,7 @@
             <img src="img/homepage-preview.jpg" alt="Прев'ю домашньої сторінки">
             <h1>Ласкаво просимо на сайт гільдії Reversal!</h1>
             <p>
-                Гільдія була створена у січні 2019 року на основі двох гільдій 
-                ReversaL West та ReversaL East. Наші інтереси:
+                Гільдія була створена у січні 2019 року на основі двох гільдій ReversaL West та ReversaL East. Наші інтереси:
             </p>
             <ul>
                 <li>цікаве та збалансоване пвп</li>
@@ -47,8 +49,7 @@
                 <h3>Трансфер на сервер Лорея</h3>
                 <img src="img/archeage-loreia.jpg" alt="Лорея ArcheAge">
                 <p>
-                    Сьогодні гільдія ReversaL повним складом трансфернулась на
-                    сервер Лорея. В планах активна гра у складі фракції NIPs.
+                    Сьогодні гільдія ReversaL повним складом трансфернулась на сервер Лорея. В планах активна гра у складі фракції NIPs.
                 </p>
                 <label>12 Feb 2019</label>
             </div>
@@ -57,9 +58,7 @@
                 <h3>Проводиться набір у гільдію</h3>
                 <img src="img/archeage-guild.jpg" alt="ArcheAge війна гільдій">
                 <p>
-                    Шукаємо дд від 9к гс, тактиків, хілів і бардів від 8к. 
-                    Від вас вимагається бажання грати у дружньому колективі 
-                    та повна самовіддача в рейдах.
+                    Шукаємо дд від 9к гс, тактиків, хілів і бардів від 8к. Від вас вимагається бажання грати у дружньому колективі та повна самовіддача в рейдах.
                 </p>
                 <label>23 Jan 2019</label>
             </div>
@@ -68,8 +67,7 @@
                 <h3>Вступ у фракцію Narnia</h3>
                 <img src="img/archeage-castle.jpg" alt="ArcheAge замок">
                 <p>
-                    Cьогодні гільдії ReversaL West та ReversaL East вступили
-                    у фракцію Narnia і сформували єдиний таг ReversaL!
+                    Cьогодні гільдії ReversaL West та ReversaL East вступили у фракцію Narnia і сформували єдиний таг ReversaL!
                 </p>
                 <label>14 Jan 2019</label>
             </div>
@@ -210,12 +208,16 @@
                     <textarea cols="40" rows="5" name="user-comment" placeholder="Повідомлення"></textarea>
                 </label>
                 <input type="submit" value="Send" class="btn" />
-             </form>
+                <input class="load" type="button" value="Load personal data">
+            </form>
         </section>
         <hr>
     </main>
     <footer>
         <small>© 2019 ReversaL</small>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
+
 </html>
