--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ReversaL</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+
 </head>
 
 <body>
@@ -18,7 +20,6 @@
             </div>
             <p>сервер Лорея</p>
         </div>
-        <br>
         <nav>
             <ul class="menu">
                 <li><a href="#home-sector">Головна</a></li>
@@ -31,7 +32,29 @@
     </header>
     <main>
         <section id="home-sector">
-            <img src="img/homepage-preview.jpg" alt="Прев'ю домашньої сторінки">
+            <div class="container">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/archeage-dragon.jpg" class="d-block w-100 " alt="Archeage дракон">
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="img/archeage-raid.jpg" class="d-block w-100" alt="ArcheAge рейд">
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="img/archeage-warrior.jpg " class="d-block w-100 " alt="Archeage воїн">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only ">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
             <h1>Ласкаво просимо на сайт гільдії Reversal!</h1>
             <p>
                 Гільдія була створена у січні 2019 року на основі двох гільдій ReversaL West та ReversaL East. Наші інтереси:
@@ -217,6 +240,8 @@
         <small>© 2019 ReversaL</small>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
